在print时隐藏雷达图

--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,10 @@
       width: 500px;
       height: 270px;
     }
+    @media print {
+      #skills{display:none;}
+    }
+
 
     .skills>.wrapper {
       display: flex;
